--- a/dein.toml
+++ b/dein.toml
@@ -1,15 +1,14 @@
-# dein
-[[plugins]]
+# dein 
+[[plugins]] 
 repo='Shougo/dein.vim'
 
-[[plugins]]
-repo='wsdjeg/dein-ui.vim'
-depends='Shougo/dein.vim'
-
-# 括弧の色付け
-[[plugins]]
-repo='luochen1990/rainbow'
-hook_add='''
+[[plugins]] 
+repo='wsdjeg/dein-ui.vim' 
+depends='dein.vim' 
+# 括弧の色付け 
+[[plugins]] 
+repo='luochen1990/rainbow' 
+hook_add=''' 
     let g:rainbow_conf = {
     \	'separately': {
     \		'*': {},
@@ -18,95 +17,47 @@ hook_add='''
     \		},
     \	}
     \}
+''' 
+# migemo検索 
+[[plugins]] 
+repo='rhysd/migemo-search.vim' 
+hook_add=''' 
+	if executable('cmigemo') 
+		cnoremap <expr><CR> migemosearch#replace_search_word()."\<CR>" 
+	endif 
+''' 
+# ホップアップの強化 
+[[plugins]] 
+repo='Shougo/pum.vim' 
+hook_add=''' 
+	inoremap <C-n>   <Cmd>call pum#map#insert_relative(+1)<CR> 
+	inoremap <C-p>   <Cmd>call pum#map#insert_relative(-1)<CR> 
+	inoremap <C-y>   <Cmd>call pum#map#confirm()<CR> 
+	inoremap <C-e>   <Cmd>call pum#map#cancel()<CR> 
+	inoremap <PageDown> <Cmd>call pum#map#insert_relative_page(+1)<CR> 
+	inoremap <PageUp>   <Cmd>call pum#map#insert_relative_page(-1)<CR> 
+''' 
+# ステータスライン 
+[[plugins]] 
+repo='vim-airline/vim-airline' 
+hook_add=''' 
+	let g:airline#extensions#tabline#enabled = 1 
+''' 
+[[plugins]] 
+repo='vim-airline/vim-airline-themes' 
+depends='vim-airline/vim-airline' 
+hook_add=''' 
+	let g:airline_theme='codedark' 
+''' 
+# vscodeみたいなカラースキーム 
+[[plugins]] 
+repo='tomasiser/vim-code-dark' 
+hook_add = ''' 
+	set background=dark 
+    au MyAutoCmd VimEnter * nested colorscheme codedark
 '''
 
-# migemo検索
-[[plugins]]
-repo='rhysd/migemo-search.vim'
-hook_add='''
-    if executable('cmigemo')
-        cnoremap <expr><CR> migemosearch#replace_search_word()."\<CR>"
-    endif
-'''
-
-# ホップアップの強化
-[[plugins]]
-repo='Shougo/pum.vim'
-hook_add='''
-    inoremap <C-n>   <Cmd>call pum#map#insert_relative(+1)<CR>
-    inoremap <C-p>   <Cmd>call pum#map#insert_relative(-1)<CR>
-    inoremap <C-y>   <Cmd>call pum#map#confirm()<CR>
-    inoremap <C-e>   <Cmd>call pum#map#cancel()<CR>
-    inoremap <PageDown> <Cmd>call pum#map#insert_relative_page(+1)<CR>
-    inoremap <PageUp>   <Cmd>call pum#map#insert_relative_page(-1)<CR>
-'''
-
-# 補完
-[[plugins]]
-repo='Shougo/ddc.vim'
-depends='Shougo/pum.vim'
-hook_add='''
-    " Change source options
-    call ddc#custom#patch_global('sourceOptions', {
-          \ 'around': {'mark': 'A'},
-          \ })
-    call ddc#custom#patch_global('sourceParams', {
-          \ 'around': {'maxSize': 500},
-          \ })
-
-    " Customize settings on a filetype
-    call ddc#custom#patch_filetype(['c', 'cpp'], 'sources', ['around', 'clangd'])
-    call ddc#custom#patch_filetype(['c', 'cpp'], 'sourceOptions', {
-          \ 'clangd': {'mark': 'C'},
-          \ })
-    call ddc#custom#patch_filetype('markdown', 'sourceParams', {
-          \ 'around': {'maxSize': 100},
-          \ })
-
-    " mugen独自の設定
-    call ddc#custom#patch_filetype(['mugen'],'sources', ['dictionary'])
-
-    call ddc#custom#patch_filetype(['mugen'],'sourceOptions', {
-          \ '_': {'matchers': ['matcher_head']},
-          \ 'dictionary': {'mark': 'D'},
-          \ })
-
-    call ddc#custom#patch_filetype(['mugen'],'sourceParams', {
-            \ 'dictionary': {'dictPaths': 
-            \ [
-            \ $VIM .. '\dict\mugen_trigger.dict',
-            \ $VIM .. '\dict\mugen_statectrler.dict',
-            \ $VIM .. '\dict\mugen_param.dict',
-            \ $VIM .. '\dict\mugen_mytrig.dict',
-            \ $VIM .. '\dict\mugen_redirect.dict',
-            \ ],
-            \ 'smartCase': v:true,
-            \ 'showMenu': v:false,
-            \ }
-            \})
-    " <TAB>: completion. ddc.vim
-    inoremap <silent><expr> <TAB>
-     \ ddc#map#pum_visible() ? '<C-n>' :
-     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
-     \ '<TAB>' : ddc#map#manual_complete()
-
-    " <S-TAB>: completion back. ddc.vim
-    inoremap <expr><S-TAB>  ddc#map#pum_visible() ? '<C-p>' : '<C-h>'
-
-    " 補完の動作をいい感じに
-    inoremap <expr><CR>  ddc#map#pum_visible() ? '<C-y>' : '<CR>'
-
-    " Use ddc.
-    call ddc#enable()
-'''
-
-[[plugins]]
-repo = 'Shougo/ddc-ui-native'
-on_source = 'ddc.vim'
-hook_add='''
-    call ddc#custom#patch_global('ui', 'native')
-'''
-
+# ddcの依存
 [[plugins]]
 repo='vim-denops/denops.vim'
 
@@ -146,54 +97,71 @@ hook_add='''
           \ })
 '''
 
-# スニペット
+# 補完
 [[plugins]]
-repo='Shougo/neosnippet.vim'
+repo='Shougo/ddc.vim'
+depends=['denops.vim','pum.vim']
+on_event = 'InsertEnter'
 hook_add='''
-    " Plugin key-mappings. neosnippet.vim
-    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
-    imap <C-k>     <Plug>(neosnippet_expand_or_jump)
-    smap <C-k>     <Plug>(neosnippet_expand_or_jump)
-    xmap <C-k>     <Plug>(neosnippet_expand_target)
+    " Change source options
+    call ddc#custom#patch_global('sourceOptions', {
+          \ 'around': {'mark': 'A'},
+          \ })
+    call ddc#custom#patch_global('sourceParams', {
+          \ 'around': {'maxSize': 500},
+          \ })
 
-    " SuperTab like snippets behavior. neosnippet.vim
-    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
-    "imap <expr><TAB>
-    " \ ddc#map#pum_visible() ? '\<C-n>' :
-    " \ neosnippet#expandable_or_jumpable() ?
-    " \    '\<Plug>(neosnippet_expand_or_jump)' : '\<TAB>'
-    smap <expr><TAB> neosnippet#expandable_or_jumpable() ?
-    \ '\<Plug>(neosnippet_expand_or_jump)' : '\<TAB>'
+    " Customize settings on a filetype
+    call ddc#custom#patch_filetype(['c', 'cpp'], 'sources', ['around', 'clangd'])
+    call ddc#custom#patch_filetype(['c', 'cpp'], 'sourceOptions', {
+          \ 'clangd': {'mark': 'C'},
+          \ })
+    call ddc#custom#patch_filetype('markdown', 'sourceParams', {
+          \ 'around': {'maxSize': 100},
+          \ })
 
-    " For conceal markers.
-    if has('conceal')
-      set conceallevel=2 concealcursor=niv
-    endif
+    " mugen独自の設定
+    call ddc#custom#patch_filetype(['mugen'],'sources', ['dictionary'])
+
+    call ddc#custom#patch_filetype(['mugen'],'sourceOptions', {
+          \ '_': {'matchers': ['matcher_head']},
+          \ 'dictionary': {'mark': 'D'},
+          \ })
+
+    call ddc#custom#patch_filetype(['mugen'],'sourceParams', {
+            \ 'dictionary': {'dictPaths': 
+            \ [
+            \ $VIM .. '\dict\mugen_trigger.dict',
+            \ $VIM .. '\dict\mugen_statectrler.dict',
+            \ $VIM .. '\dict\mugen_param.dict',
+            \ $VIM .. '\dict\mugen_mytrig.dict',
+            \ $VIM .. '\dict\mugen_redirect.dict',
+            \ ],
+            \ 'smartCase': v:true,
+            \ 'showMenu': v:false,
+            \ }
+            \})
+    " pumと連携
+    " call ddc#custom#patch_global('completionMenu', 'pum.vim')
+    " <TAB>: completion. ddc.vim
+    inoremap <silent><expr> <TAB>
+     \ pumvisible() ? '<C-n>' :
+     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
+     \ '<TAB>' : ddc#map#manual_complete()
+
+    " <S-TAB>: completion back. ddc.vim
+    inoremap <expr><S-TAB>  pumvisible() ? '<C-p>' : '<C-h>'
+
+    " 補完の動作をいい感じに
+    inoremap <expr><CR>  pumvisible() ? '<C-y>' : '<CR>'
+
+    " Use ddc.
+    call ddc#enable()
 '''
 
 [[plugins]]
-repo='Shougo/neosnippet-snippets'
+repo = 'Shougo/ddc-ui-native'
+on_source = 'ddc.vim'
 hook_add='''
-    " Enable snipMate compatibility feature.
-    let g:neosnippet#enable_snipmate_compatibility = 1
-    " Tell Neosnippet about the other snippets
-    let g:neosnippet#snippets_directory=$VIM .. '\snippets'
-'''
-
-# ステータスライン
-[[plugins]]
-repo='vim-airline/vim-airline'
-hook_add='''
-    let g:airline#extensions#tabline#enabled = 1
-'''
-
-[[plugins]]
-repo='vim-airline/vim-airline-theme'
-
-# vscodeみたいなカラースキーム
-[[plugins]]
-repo='tomasiser/vim-code-dark'
-hook_add = '''
-  set background=dark
-  au MyAutoCmd VimEnter * nested colorscheme codedark
+    call ddc#custom#patch_global('ui', 'native')
 '''
