--- a/dein.toml
+++ b/dein.toml
@@ -6,6 +6,7 @@ repo='Shougo/dein.vim'
 [[plugins]] 
 repo='wsdjeg/dein-ui.vim' 
 depends='dein.vim' 
+
 # ホップアップの強化 
 [[plugins]] 
 repo='Shougo/pum.vim' 
@@ -18,13 +19,21 @@ hook_add='''
 	inoremap <PageUp>   <Cmd>call pum#map#insert_relative_page(-1)<CR> 
 ''' 
 
-# vscodeみたいなカラースキーム 
+# カラースキーマ
 [[plugins]] 
-repo='tomasiser/vim-code-dark' 
+repo='morhetz/gruvbox' 
 hook_add = ''' 
+    let g:gruvbox_italicize_comments=0
 	set background=dark 
-    au MyAutoCmd VimEnter * nested colorscheme codedark
+    au MyAutoCmd VimEnter * nested colorscheme gruvbox
 '''
+
+[[plugins]] 
+repo='vim-airline/vim-airline-themes' 
+depends='vim-airline' 
+hook_add=''' 
+	let g:airline_theme='gruvbox' 
+''' 
 
 # ステータスライン 
 [[plugins]] 
@@ -34,122 +43,13 @@ hook_add='''
     let g:airline#extensions#tabline#formatter = 'jsformatter'
 ''' 
 
-[[plugins]] 
-repo='vim-airline/vim-airline-themes' 
-depends='vim-airline/vim-airline' 
-hook_add=''' 
-	let g:airline_theme='codedark' 
-''' 
-
-
-# ddcの依存
-[[plugins]]
-repo='vim-denops/denops.vim'
 
 
 
-# ddc source
-[[plugins]]
-repo='matsui54/ddc-dictionary'
-
-[[plugins]]
-repo='Shougo/ddc-around'
-depends='Shougo/ddc.vim'
-hook_add='''
-    " Customize global setting
-    " Use around source.
-    " https://github.com/Shougo/ddc-around
-    call ddc#custom#patch_global('sources', ['around'])
-'''
 
 
-# ddc filter
-[[plugins]]
-repo='Shougo/ddc-matcher_head'
-depends='Shougo/ddc.vim'
 
-[[plugins]]
-repo='Shougo/ddc-sorter_rank'
-depends='Shougo/ddc.vim'
-hook_add='''
-    " Use matcher_head and sorter_rank.
-    " https://github.com/Shougo/ddc-matcher_head
-    " https://github.com/Shougo/ddc-sorter_rank
-    call ddc#custom#patch_global('sourceOptions', {
-          \ '_': {
-          \   'matchers': ['matcher_head'],
-          \   'sorters': ['sorter_rank']},
-          \ })
-'''
 
-# 補完
-[[plugins]]
-repo='Shougo/ddc.vim'
-depends=['denops.vim','pum.vim']
-on_event = 'InsertEnter'
-hook_add='''
-    " Change source options
-    call ddc#custom#patch_global('sourceOptions', {
-          \ 'around': {'mark': 'A'},
-          \ })
-    call ddc#custom#patch_global('sourceParams', {
-          \ 'around': {'maxSize': 500},
-          \ })
-
-    " Customize settings on a filetype
-    call ddc#custom#patch_filetype(['c', 'cpp'], 'sources', ['around', 'clangd'])
-    call ddc#custom#patch_filetype(['c', 'cpp'], 'sourceOptions', {
-          \ 'clangd': {'mark': 'C'},
-          \ })
-    call ddc#custom#patch_filetype('markdown', 'sourceParams', {
-          \ 'around': {'maxSize': 100},
-          \ })
-
-    " mugen独自の設定
-    call ddc#custom#patch_filetype(['mugen'],'sources', ['dictionary'])
-
-    call ddc#custom#patch_filetype(['mugen'],'sourceOptions', {
-          \ '_': {'matchers': ['matcher_head']},
-          \ 'dictionary': {'mark': 'D'},
-          \ })
-
-    call ddc#custom#patch_filetype(['mugen'],'sourceParams', {
-            \ 'dictionary': {'dictPaths': 
-            \ [
-            \ $VIM .. '\dict\mugen_trigger.dict',
-            \ $VIM .. '\dict\mugen_statectrler.dict',
-            \ $VIM .. '\dict\mugen_param.dict',
-            \ $VIM .. '\dict\mugen_mytrig.dict',
-            \ $VIM .. '\dict\mugen_redirect.dict',
-            \ ],
-            \ 'smartCase': v:true,
-            \ 'showMenu': v:false,
-            \ }
-            \})
-    " pumと連携
-    " call ddc#custom#patch_global('completionMenu', 'pum.vim')
-    " <TAB>: completion. ddc.vim
-    inoremap <silent><expr> <TAB>
-     \ pumvisible() ? '<C-n>' :
-     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
-     \ '<TAB>' : ddc#map#manual_complete()
-
-    " <S-TAB>: completion back. ddc.vim
-    inoremap <expr><S-TAB>  pumvisible() ? '<C-p>' : '<C-h>'
-
-    " 補完の動作をいい感じに
-    inoremap <expr><CR>  pumvisible() ? '<C-y>' : '<CR>'
-
-    " Use ddc.
-    call ddc#enable()
-'''
-
-[[plugins]]
-repo = 'Shougo/ddc-ui-native'
-on_source = 'ddc.vim'
-hook_add='''
-    call ddc#custom#patch_global('ui', 'native')
-'''
 
 # migemo検索 
 [[plugins]] 
@@ -159,3 +59,73 @@ hook_add='''
 		cnoremap <expr><CR> migemosearch#replace_search_word()."\<CR>" 
 	endif 
 ''' 
+
+
+# カッコとか関連をsaコマンドで行えるように
+[[plugins]]
+repo='machakann/vim-sandwich'
+
+# .(繰り返し)を強化
+[[plugins]]
+repo='tpope/vim-repeat'
+
+# fzfで曖昧検索
+[[plugins]]
+repo='junegunn/fzf'
+build_on='''
+    ./install -all
+'''
+[[plugins]]
+repo = 'junegunn/fzf.vim'
+
+# カッコとかを閉じる
+[[depends]]
+repo='cohama/lexima.vim'
+hook_add='''
+    let g:lexima_enable_basic_rules=1
+'''
+
+# 括弧の色付け 
+[[plugins]] 
+repo='luochen1990/rainbow' 
+hook_add=''' 
+    let g:rainbow_active = 1    " set to 0 if you want to enable it later via :RainbowToggle
+    let g:rainbow_conf = {
+    \	'separately': {
+    \		'*': {},
+    \		'mugen': {
+    \			'parentheses': ['start=/(/ end=/)/ fold'], 
+    \		},
+    \	}
+    \}
+''' 
+
+# スニペット
+[[plugins]]
+repo='Shougo/neosnippet.vim'
+hook_add='''
+    " Plugin key-mappings. neosnippet.vim
+    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
+    imap <C-k>     <Plug>(neosnippet_expand_or_jump)
+    smap <C-k>     <Plug>(neosnippet_expand_or_jump)
+    xmap <C-k>     <Plug>(neosnippet_expand_target)
+
+    " SuperTab like snippets behavior. neosnippet.vim
+    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
+    smap <expr><TAB> neosnippet#expandable_or_jumpable() ?
+    \ '\<Plug>(neosnippet_expand_or_jump)' : '\<TAB>'
+
+    " For conceal markers.
+    if has('conceal')
+      set conceallevel=2 concealcursor=niv
+    endif
+'''
+
+[[plugins]]
+repo='Shougo/neosnippet-snippets'
+hook_add='''
+    " Enable snipMate compatibility feature.
+    let g:neosnippet#enable_snipmate_compatibility = 1
+    " Tell Neosnippet about the other snippets
+    let g:neosnippet#snippets_directory=$VIM .. '\snippets'
+'''
