--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -1,51 +1,134 @@
 
-
-# スニペット
+# ddcの依存
 [[plugins]]
-repo='Shougo/neosnippet.vim'
-hook_add='''
-    " Plugin key-mappings. neosnippet.vim
-    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
-    imap <C-k>     <Plug>(neosnippet_expand_or_jump)
-    smap <C-k>     <Plug>(neosnippet_expand_or_jump)
-    xmap <C-k>     <Plug>(neosnippet_expand_target)
+repo='vim-denops/denops.vim'
 
-    " SuperTab like snippets behavior. neosnippet.vim
-    " Note: It must be "imap" and "smap".  It uses <Plug> mappings.
-    "imap <expr><TAB>
-    " \ ddc#map#pum_visible() ? '\<C-n>' :
-    " \ neosnippet#expandable_or_jumpable() ?
-    " \    '\<Plug>(neosnippet_expand_or_jump)' : '\<TAB>'
-    smap <expr><TAB> neosnippet#expandable_or_jumpable() ?
-    \ '\<Plug>(neosnippet_expand_or_jump)' : '\<TAB>'
+# ddc source
+[[plugins]]
+repo='matsui54/ddc-dictionary'
+on_source='ddc.vim'
+[[plugins]]
+repo='Shougo/ddc-around'
+on_source='ddc.vim'
 
-    " For conceal markers.
-    if has('conceal')
-      set conceallevel=2 concealcursor=niv
-    endif
+# ddc filter
+[[plugins]]
+repo='Shougo/ddc-matcher_head'
+on_source='ddc.vim'
+[[plugins]]
+repo='Shougo/ddc-sorter_rank'
+on_source='ddc.vim'
+[[plugins]]
+repo='Shougo/ddc-filter-converter_remove_overlap'
+on_source='ddc.vim'
+
+# ddc UI
+[[plugins]]
+repo = 'Shougo/ddc-ui-native'
+on_source = 'ddc.vim'
+
+
+# 補完
+[[plugins]]
+repo='Shougo/ddc.vim'
+depends=['denops.vim','pum.vim']
+on_event = 'InsertEnter'
+hook_source='''
+    " uiの設定
+    call ddc#custom#patch_global('ui', 'native')
+
+    " Use matcher_head and sorter_rank.
+    " https://github.com/Shougo/ddc-matcher_head
+    " https://github.com/Shougo/ddc-sorter_rank
+    call ddc#custom#patch_global('sourceOptions', {
+          \ '_': {
+          \   'matchers': ['matcher_head'],
+          \   'sorters': ['sorter_rank']},
+          \ })
+
+    " Customize global setting
+    " Use around source.
+    " https://github.com/Shougo/ddc-around
+    call ddc#custom#patch_global('sources', ['around'])
+
+    " Change source options
+    call ddc#custom#patch_global('sourceOptions', {
+          \ 'around': {'mark': 'A'},
+          \ })
+    call ddc#custom#patch_global('sourceParams', {
+          \ 'around': {'maxSize': 500},
+          \ })
+
+    " Customize settings on a filetype
+    call ddc#custom#patch_filetype(['c', 'cpp'], 'sources', ['around', 'clangd'])
+    call ddc#custom#patch_filetype(['c', 'cpp'], 'sourceOptions', {
+          \ 'clangd': {'mark': 'C'},
+          \ })
+    call ddc#custom#patch_filetype('markdown', 'sourceParams', {
+          \ 'around': {'maxSize': 100},
+          \ })
+
+    " mugen独自の設定
+    call ddc#custom#patch_filetype(['mugen'],'sources', ['dictionary'])
+
+    call ddc#custom#patch_filetype(['mugen'],'sourceOptions', {
+          \ '_': {'matchers': ['matcher_head']},
+          \ 'dictionary': {'mark': 'D'},
+          \ })
+
+    call ddc#custom#patch_filetype(['mugen'],'sourceParams', {
+            \ 'dictionary': {'dictPaths': 
+            \ [
+            \ $VIM .. '\dict\mugen_trigger.dict',
+            \ $VIM .. '\dict\mugen_statectrler.dict',
+            \ $VIM .. '\dict\mugen_param.dict',
+            \ $VIM .. '\dict\mugen_mytrig.dict',
+            \ $VIM .. '\dict\mugen_redirect.dict',
+            \ ],
+            \ 'smartCase': v:true,
+            \ 'showMenu': v:false,
+            \ }
+            \})
+
+    " pumと連携
+    call ddc#custom#patch_global('completionMenu', 'pum.vim')
+
+    " <TAB>: completion. ddc.vim
+    inoremap <silent><expr> <TAB>
+     \ pumvisible() ? '<C-n>' :
+     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
+     \ '<TAB>' : ddc#map#manual_complete()
+
+    " <S-TAB>: completion back. ddc.vim
+    inoremap <expr><S-TAB>  pumvisible() ? '<C-p>' : '<C-h>'
+
+    " 補完の動作をいい感じに
+    inoremap <expr><CR>  pumvisible() ? '<C-y>' : '<CR>'
+
+    " Use ddc.
+    call ddc#enable()
 '''
 
-[[plugins]]
-repo='Shougo/neosnippet-snippets'
-hook_add='''
-    " Enable snipMate compatibility feature.
-    let g:neosnippet#enable_snipmate_compatibility = 1
-    " Tell Neosnippet about the other snippets
-    let g:neosnippet#snippets_directory=$VIM .. '\snippets'
-'''
 
 
 
-# 括弧の色付け 
+
+# ファイラ
 [[plugins]] 
-repo='luochen1990/rainbow' 
+repo='lambdalisue/fern.vim' 
 hook_add=''' 
-    let g:rainbow_conf = {
-    \	'separately': {
-    \		'*': {},
-    \		'mugen': {
-    \			'parentheses': ['start=/(/ end=/)/ fold'], 
-    \		},
-    \	}
-    \}
+    " Ctrl+nでファイルツリーを表示/非表示する
+    nnoremap <C-n> :Fern . -reveal=% -drawer -toggle -width=40<CR>
+''' 
+# ファイラの色づけ
+[[plugins]] 
+repo='lambdalisue/glyph-palette.vim' 
+depends='fern.vim'
+hook_add=''' 
+    " アイコンに色をつける
+    augroup my-glyph-palette
+      autocmd! *
+      autocmd FileType fern call glyph_palette#apply()
+      autocmd FileType nerdtree,startify call glyph_palette#apply()
+    augroup END
 ''' 
