--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -31,7 +31,7 @@ on_source = 'ddc.vim'
 # 補完
 [[plugins]]
 repo='Shougo/ddc.vim'
-depends=['denops.vim','pum.vim']
+depends='denops.vim'
 on_event = 'InsertEnter'
 hook_source='''
     " uiの設定
@@ -90,8 +90,6 @@ hook_source='''
             \ }
             \})
 
-    " pumと連携
-    call ddc#custom#patch_global('completionMenu', 'pum.vim')
 
     " <TAB>: completion. ddc.vim
     inoremap <silent><expr> <TAB>
@@ -108,8 +106,6 @@ hook_source='''
     " Use ddc.
     call ddc#enable()
 '''
-
-
 
 
 
