--- a/dein.toml
+++ b/dein.toml
@@ -61,11 +61,8 @@ build_on='''
 repo = 'junegunn/fzf.vim'
 
 # カッコとかを閉じる
-[[depends]]
+[[plugins]]
 repo='cohama/lexima.vim'
-hook_add='''
-    let g:lexima_enable_basic_rules=1
-'''
 
 # 括弧の色付け 
 [[plugins]] 
