--- a/dein.toml
+++ b/dein.toml
@@ -68,14 +68,90 @@ hook_add='''
 [[plugins]]
 repo='tpope/vim-repeat'
 
-# fzfで曖昧検索
+# ファジーファインダー
 [[plugins]]
-repo='junegunn/fzf'
-build_on='''
-    ./install -all
+repo = 'Shougo/ddu-ui-ff'
+[[plugins]]
+repo = 'Shougo/ddu-source-file_rec'
+[[plugins]]
+repo = 'Shougo/ddu-filter-matcher_substring'
+[[plugins]]
+repo = 'Shougo/ddu-kind-file'
+[[plugins]]
+repo='Shougo/ddu.vim'
+hook_add='''
+    call ddu#custom#patch_global({
+    \   'ui': 'ff',
+    \   'sources': [
+    \     {
+    \       'name': 'file_rec',
+    \       'params': {
+    \         'ignoredDirectories': ['.git', 'node_modules', 'vendor', '.next', '.vscode']
+    \       }
+    \     }
+    \   ],
+    \   'sourceOptions': {
+    \     '_': {
+    \       'matchers': ['matcher_substring'],
+    \     },
+    \   },
+    \   'filterParams': {
+    \     'matcher_substring': {
+    \       'highlightMatched': 'Title',
+    \     },
+    \   },
+    \   'kindOptions': {
+    \     'file': {
+    \       'defaultAction': 'open',
+    \     },
+    \   },
+    \   'uiParams': {
+    \     'ff': {
+    \       'startFilter': v:true,
+    \       'prompt': '> ',
+    \       'split': 'floating',
+    \     }
+    \   },
+    \ })
+
+
+
+    autocmd FileType ddu-ff call s:ddu_my_settings()
+    function! s:ddu_my_settings() abort
+      nnoremap <buffer><silent> <CR>
+        \ <Cmd>call ddu#ui#ff#do_action('itemAction', {'name': 'open', 'params': {'command': 'vsplit'}})<CR>
+
+      nnoremap <buffer><silent> <Space>
+        \ <Cmd>call ddu#ui#ff#do_action('itemAction', {'name': 'open', 'params': {'command': 'split'}})<CR>
+
+      nnoremap <buffer><silent> a
+        \ <Cmd>call ddu#ui#ff#do_action('openFilterWindow')<CR>
+
+      nnoremap <buffer><silent> p
+        \ <Cmd>call ddu#ui#ff#do_action('preview')<CR>
+
+      nnoremap <buffer><silent> <Esc>
+        \ <Cmd>call ddu#ui#ff#do_action('quit')<CR>
+    endfunction
+
+    autocmd FileType ddu-ff-filter call s:ddu_filter_my_settings()
+    function! s:ddu_filter_my_settings() abort
+      inoremap <buffer><silent> <CR>
+        \ <Esc><Cmd>close<CR>
+
+      inoremap <buffer><silent> <Esc>
+        \ <Esc><Cmd>close<CR>
+
+      nnoremap <buffer><silent> <CR>
+        \ <Cmd>close<CR>
+
+      nnoremap <buffer><silent> <Esc>
+        \ <Cmd>close<CR>
+    endfunction
+
+    nmap <silent> ,f <Cmd>call ddu#start({})<CR>
 '''
-[[plugins]]
-repo = 'junegunn/fzf.vim'
+
 
 # カッコとかを閉じる
 [[plugins]]
