--- a/dein.toml
+++ b/dein.toml
@@ -325,5 +325,13 @@ depends=['context_filetype.vim']
 repo='tpope/vim-commentary'
 
 # pum
-#[[plugins]]
-#repo='Shougo/pum.vim'
+[[plugins]]
+repo='Shougo/pum.vim'
+hook_add='''
+    inoremap <C-n>   <Cmd>call pum#map#insert_relative(+1)<CR>
+    inoremap <C-p>   <Cmd>call pum#map#insert_relative(-1)<CR>
+    inoremap <C-y>   <Cmd>call pum#map#confirm()<CR>
+    inoremap <C-e>   <Cmd>call pum#map#cancel()<CR>
+'''
+
+
