--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -93,15 +93,15 @@ hook_source='''
 
     " <TAB>: completion. ddc.vim
     inoremap <silent><expr> <TAB>
-    \ ddc#map#pum_visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' :
+    \ pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' :
     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
     \ '<TAB>' : ddc#map#manual_complete()
 
     " <S-TAB>: completion back. ddc.vim
-    inoremap <expr><S-TAB>  ddc#map#pum_visible() ? '<C-p>' : '<C-h>'
+    inoremap <expr><S-TAB>  pum#visible() ? '<C-p>' : '<C-h>'
 
     " 補完の動作をいい感じに
-    inoremap <expr><CR>  ddc#map#pum_visible() ? '<C-y>' : '<CR>'
+    inoremap <expr><CR>  pum#visible() ? '<C-y>' : '<CR>'
 
     " コマンド補完
     call ddc#custom#patch_global(#{
