--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -17,20 +17,21 @@ on_source='ddc.vim'
 [[plugins]]
 repo='Shougo/ddc-source-cmdline'
 on_source='ddc.vim'
+# 過去コマンドから
+[[plugins]]
+repo='Shougo/ddc-source-cmdline-history'
+on_source='ddc.vim'
 
 # ddc filter
 [[plugins]]
-repo='Shougo/ddc-matcher_head'
-on_source='ddc.vim'
-[[plugins]]
-repo='Shougo/ddc-sorter_rank'
-on_source='ddc.vim'
-[[plugins]]
 repo='Shougo/ddc-filter-converter_remove_overlap'
 on_source='ddc.vim'
+[[plugins]]
+repo='tani/ddc-fuzzy'
+on_source='ddc.vim'
 
 
-# pddc UI um.vimと連携
+# ddc UI pum.vimと連携
 [[plugins]]
 repo='Shougo/ddc-ui-pum'
 on_source = 'ddc.vim'
@@ -45,24 +46,29 @@ hook_source='''
     " uiの設定
     call ddc#custom#patch_global('ui', 'pum')
 
-    " Use matcher_head and sorter_rank.
-    " https://github.com/Shougo/ddc-matcher_head
-    " https://github.com/Shougo/ddc-sorter_rank
+    " Use matcher_fuzzy and sorter_fuzzy.
     call ddc#custom#patch_global('sourceOptions', {
           \ '_': {
-          \   'matchers': ['matcher_head'],
-          \   'sorters': ['sorter_rank']},
+          \   'matchers': ['matcher_fuzzy'],
+          \   'sorters': ['sorter_fuzzy'],
+          \   'converters': ['converter_fuzzy']
+          \},
           \ })
 
     " Customize global setting
     " Use around source.
     " https://github.com/Shougo/ddc-around
-    call ddc#custom#patch_global('sources', ['around','cmdline'])
+    call ddc#custom#patch_global('sources', [
+                \ 'around',
+                \ 'cmdline',
+                \ 'cmdline-history',
+                \ ])
 
     " Change source options
     call ddc#custom#patch_global('sourceOptions', {
           \ 'around': {'mark': 'Ard'},
           \ 'cmdline': {'mark': 'Cmd'},
+          \ 'cmdline-history': {'mark': 'Hst'},
           \ })
     call ddc#custom#patch_global('sourceParams', {
           \ 'around': {'maxSize': 500},
@@ -72,7 +78,7 @@ hook_source='''
     call ddc#custom#patch_filetype(['mugen'],'sources', ['dictionary'])
 
     call ddc#custom#patch_filetype(['mugen'],'sourceOptions', {
-          \ '_': {'matchers': ['matcher_head']},
+          \ '_': {'matchers': ['matcher_fuzzy']},
           \ 'dictionary': {'mark': 'D'},
           \ })
 
@@ -97,11 +103,15 @@ hook_source='''
     \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
     \ '<TAB>' : ddc#map#manual_complete()
 
-    " <S-TAB>: completion back. ddc.vim
-    inoremap <expr><S-TAB>  pum#visible() ? '<C-p>' : '<C-h>'
 
+    
     " 補完の動作をいい感じに
-    inoremap <expr><CR>  pum#visible() ? '<C-y>' : '<CR>'
+    " leximaとの干渉があるので、このタイミングでleximaのルールを設定し、上書き
+    call lexima#set_default_rules()
+    execute printf("inoremap <expr><silent> <CR> pum#visible() ? pum#map#confirm() : lexima#expand(%s, 'i')",
+              \ string(lexima#string#to_mappable('<CR>'))
+              \ )
+    
 
     " コマンド補完
     call ddc#custom#patch_global(#{
