--- a/dein_ddc.toml
+++ b/dein_ddc.toml
@@ -39,6 +39,7 @@ on_source='ddc.vim'
 [[plugins]]
 repo='Shougo/ddc-ui-pum'
 on_source = 'ddc.vim'
+depends=['pum.vim']
 
 # ポップアップでプレビュー
 [[plugins]]
@@ -171,5 +172,17 @@ hook_source='''
 
     " Use ddc.
     call ddc#enable()
+'''
+
+[[plugins]]
+repo='hrsh7th/vim-vsnip'
+on_source = 'vim-vsnip-integ'
+
+[[plugins]]
+repo='hrsh7th/vim-vsnip-integ'
+on_source = 'ddc.vim'
+depends=['vim-vsnip']
+hook_add='''
+    autocmd User PumCompleteDone call vsnip_integ#on_complete_done(g:pum#completed_item)
 '''
 
