--- a/dein_ddc.toml
+++ b/dein_ddc.toml
@@ -120,12 +120,21 @@ hook_source='''
             \ }
             \})
 
+    function! JudgeDoComplation() abort
+        if col('.') <= 1
+            return v:true
+        else if getline('.')[col('.') - 2] =~# '\s'
+            return v:true
+        else if getline('.')[col('.') - 2] =~# ';'
+            return v:true
+        endif
+        return v:false
+    endfunction
+
 
     " <TAB>: completion. ddc.vim
     inoremap <silent><expr> <TAB>
-    \ pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' :
-    \ (col('.') <= 1 <Bar><Bar> getline('.')[col('.') - 2] =~# '\s'<Bar><Bar> getline('.')[col('.') - 2] =~# ';') ?
-    \ '<TAB>' : ddc#map#manual_complete()
+    \ pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : JudgeDoComplation() ? '<TAB>' : ddc#map#manual_complete()
 
     
     " 補完の動作をいい感じに
