--- a/dein.toml
+++ b/dein.toml
@@ -337,8 +337,6 @@ hook_add='''
         nnoremap <buffer> g[ <plug>(lsp-previous-diagnostic)
         nnoremap <buffer> g] <plug>(lsp-next-diagnostic)
         nnoremap <buffer> K <plug>(lsp-hover)
-        nnoremap <buffer> <expr><c-f> lsp#scroll(+4)
-        nnoremap <buffer> <expr><c-d> lsp#scroll(-4)
 
         let g:lsp_format_sync_timeout = 1000
         autocmd! BufWritePre <buffer> call execute('LspDocumentFormatSync')
@@ -366,3 +364,6 @@ hook_post_source = '''
   " エラーハイライト
   highlight link LspWarningHighlight Error
 '''
+# LSPのアイコン
+[[plugins]]
+repo='mattn/vim-lsp-icons'
