--- a/dein_ddc.toml
+++ b/dein_ddc.toml
@@ -70,18 +70,16 @@ hook_source='''
           \ '_': {
           \   'matchers': ['matcher_fuzzy'],
           \   'sorters': ['sorter_fuzzy'],
-          \   'converters': ['converter_fuzzy']
+          \   'converters': ['converter_remove_overlap'],
           \},
           \ })
 
     " Customize global setting
-    " Use around source.
-    " https://github.com/Shougo/ddc-around
     call ddc#custom#patch_global('sources', [
                 \ 'vim-lsp',
-                \ 'around',
                 \ 'cmdline',
                 \ 'cmdline-history',
+                \ 'around',
                 \ ])
 
     " Change source options
