--- a/dein.toml
+++ b/dein.toml
@@ -17,18 +17,18 @@ repo='vim-denops/denops.vim'
 
 # カラースキーマ
 [[plugins]] 
-repo='morhetz/gruvbox' 
+repo='joshdick/onedark.vim' 
 hook_add = ''' 
-    let g:gruvbox_italicize_comments=0
+    let g:onedark_hide_endofbuffer=1
 	set background=dark 
-    au MyAutoCmd VimEnter * nested colorscheme gruvbox
+    au MyAutoCmd VimEnter * nested colorscheme onedark
 '''
 
 [[plugins]] 
 repo='vim-airline/vim-airline-themes' 
 depends='vim-airline' 
 hook_add=''' 
-	let g:airline_theme='gruvbox' 
+	let g:airline_theme='onedark' 
 	let g:airline_highlighting_cache=1
 ''' 
 
